--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1920,1008
+Size=2560,1368
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1593,372
-Size=327,655
+Pos=2141,335
+Size=419,1052
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,13 +31,13 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=1593,372
-Size=327,655
+Pos=2141,335
+Size=419,1052
 Collapsed=0
 DockId=0x00000010,2
 
 [Window][Dear ImGui Demo]
-Pos=360,31
+Pos=557,45
 Size=620,624
 Collapsed=0
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=1593,372
-Size=327,655
+Pos=2141,335
+Size=419,1052
 Collapsed=0
 DockId=0x00000010,1
 
@@ -103,8 +103,8 @@ Size=32,32
 Collapsed=0
 
 [Window][###Scene]
-Pos=280,19
-Size=1311,1008
+Pos=0,19
+Size=2139,1368
 Collapsed=0
 DockId=0x00000007,0
 
@@ -114,10 +114,9 @@ Size=350,70
 Collapsed=0
 
 [Window][Actor Spawner]
-Pos=0,19
-Size=278,231
+Pos=3,87
+Size=187,318
 Collapsed=0
-DockId=0x00000008,0
 
 [Window][Toolbar]
 Pos=148,623
@@ -152,33 +151,28 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=0,252
-Size=278,775
+Pos=6,490
+Size=994,242
 Collapsed=0
-DockId=0x00000011,0
 
 [Window][Scene Hierarchy]
-Pos=1593,19
-Size=327,351
+Pos=2141,19
+Size=419,314
 Collapsed=0
 DockId=0x0000000C,0
 
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,1008 Split=X
-  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=278,1008 Split=Y Selected=0xD6FA1636
-    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=101,231 Selected=0xD6FA1636
-    DockNode        ID=0x00000011 Parent=0x00000001 SizeRef=101,775 Selected=0x04985A5E
-  DockNode          ID=0x00000002 Parent=0xD9E1F891 SizeRef=1640,1008 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1311,721 Split=Y Selected=0xB32CD986
-      DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
-        DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
-        DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
-      DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=327,721 Split=Y Selected=0xE884D536
-      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
-      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
-        DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
-        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,251 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,468 Selected=0xDC408BFB
+DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Split=X
+  DockNode        ID=0x00000003 Parent=0xD9E1F891 SizeRef=2139,721 Split=Y Selected=0xB32CD986
+    DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
+      DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
+      DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
+    DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
+  DockNode        ID=0x00000004 Parent=0xD9E1F891 SizeRef=419,721 Split=Y Selected=0xE884D536
+    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
+      DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
+      DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
+        DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,186 Selected=0x9A68760C
+        DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,624 Selected=0xF02CD328
 
