--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=2560,1368
+Size=1280,721
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=2141,335
-Size=419,742
+Pos=1071,186
+Size=209,390
 Collapsed=0
 DockId=0x00000001,0
 
@@ -31,13 +31,13 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=2141,335
-Size=419,742
+Pos=1071,186
+Size=209,390
 Collapsed=0
 DockId=0x00000001,2
 
 [Window][Dear ImGui Demo]
-Pos=557,45
+Pos=212,225
 Size=620,624
 Collapsed=0
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=2141,335
-Size=419,742
+Pos=1071,186
+Size=209,390
 Collapsed=0
 DockId=0x00000001,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=2139,1368
+Size=1069,721
 Collapsed=0
 DockId=0x00000007,0
 
@@ -114,8 +114,8 @@ Size=350,70
 Collapsed=0
 
 [Window][Actor Spawner]
-Pos=3,87
-Size=238,315
+Pos=9,85
+Size=228,1068
 Collapsed=0
 
 [Window][Toolbar]
@@ -135,8 +135,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=2141,1079
-Size=419,308
+Pos=1071,578
+Size=209,162
 Collapsed=0
 DockId=0x00000002,0
 
@@ -151,18 +151,18 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=0,1105
-Size=994,242
+Pos=209,721
+Size=994,204
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=2141,19
-Size=419,314
+Pos=1071,19
+Size=209,165
 Collapsed=0
 DockId=0x0000000C,0
 
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Split=X
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=X
   DockNode          ID=0x00000003 Parent=0xD9E1F891 SizeRef=2139,721 Split=Y Selected=0xB32CD986
     DockNode        ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
       DockNode      ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
@@ -175,6 +175,6 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Spli
       DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
         DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=218,186 Selected=0x9A68760C
         DockNode    ID=0x00000010 Parent=0x0000000A SizeRef=218,624 Split=Y Selected=0xF02CD328
-          DockNode  ID=0x00000001 Parent=0x00000010 SizeRef=419,742 Selected=0xF02CD328
+          DockNode  ID=0x00000001 Parent=0x00000010 SizeRef=419,742 Selected=0x3F488DE8
           DockNode  ID=0x00000002 Parent=0x00000010 SizeRef=419,308 Selected=0xCB7211A8
 
